css/addons.css
b {
	font-weight: bold;
}

i {
	font-style: italic;
}

code {
	font-family: Courier;
	background: rgb(224, 221, 214);
	border-radius: 3px;
	padding: 3px;
}

pre code {
	background: none;
	border-radius: none;
	padding: auto;
}

pre {
	padding: 10px;
	margin-bottom: 20px;
	word-wrap: break-word;
	white-space: pre-wrap; 
	font-size: 14px;
}

#edit_content .editable, #edit_content h2 {
	outline: none;
	padding: 5px 5px;
	border: 1px dashed #ddd;
}
	#edit_content .editable {
		font-size: 13px;
		padding: 10px 10px;
	}

#edit_content #create_document {
	margin-top: 0px;
}

#edit_content.single h2, #edit_content.single .editable {
	border:0px;
}

#sidebar h4, #edit_content h4, #edit_content h5, .docpage h4 {
	font-family: "Montserrat";
	font-weight: normal;
	opacity: 0.85;
}

#sidebar ul {
	margin-top: 5px;
	margin-left: 10px;
}

#sidebar ul li {
	margin:0px;
}

.button {
	border:0px;
	display: block;
	text-decoration: none;
	padding: 10px 15px;
	background-color: rgb( 87, 154, 169 );
	font-size: 13px;
	font-family: "Montserrat";
	font-weight: bold;
	color: rgb( 255, 255, 255 );
	text-transform: uppercase;
	text-align: center;
}
	.button:active {
		background-color: rgb( 87, 164, 169 );
	}

#intro_header.docpage {
	padding: 20px 0px 5px;
}
	#intro_header.docpage ul {
		margin-top:-30px;
		margin-left: -15px;
	}
	
	#intro_header.docpage ul li {
		float:left;
		font-size: 12px;
		margin: 10px 5px;
	}

#involved.docpage {
		border-top: 0px solid rgb( 183, 86, 84 );
		border-bottom: 1px solid rgb( 183, 86, 84 );	
	}
	
	#involved.docpage .container {
		padding-top: 5px;
		padding-bottom: 0px;
	}
		#involved.docpage .area {
			margin-top: -10px;
			margin-bottom: -5px;
		}
			
			#involved.plugin #plugin, #involved.theme #theme, #involved.bundle #bundle, #involved.core #core {
				background: rgb( 183, 86, 84 );
			}
			
			#involved.plugin #plugin i, #involved.theme #theme i, #involved.bundle #bundle i, #involved.core #core i {
				background: #fff;
				color: rgb( 183, 86, 84 );
			}
			
			#involved.docpage .area i {
				text-align: center;
				opacity: 1.0;
				font-size: 35px;
				line-height: 54px;
				height: 45px;
				width: 45px;
				color: rgb( 255, 255, 255 );
				border-radius: 50%;
				background-color: rgb( 183, 86, 84 );
				margin-left: -10px;
			}
				#involved.docpage .area a:hover i {
					background-color: rgb( 255, 255, 255 );
					color: rgb( 183, 86, 84 );
				}

				#involved.docpage .area.selected i {
					background-color: rgb( 255, 255, 255 );
					color: rgb( 183, 86, 84 );
				}
			
		#involved.docpage .area p {
			display:inline;
			float:auto;
		}
			#involved.docpage .area p strong {
				position:relative;
				top: 4px;
			}
			
.icon-edit {
	font-size: 35px;
	margin-right: 5px;
	margin-top: 21px;
}
	.icon-edit:hover {
		opacity: 1.0;
	}

#sidebar {
	margin-top: 10px;
}
	#sidebar ul {
		width: 200px;
		position:fixed;
	}
		#sidebar ul li {
			text-align: right;
			margin-bottom: 10px;
		}
	
/*
	HUMANIZED MESSAGES 1.0 - Habari Edition
	idea - http://www.humanized.com/weblog/2006/09/11/monolog_boxes_and_transparent_messages
	home - http://humanmsg.googlecode.com
*/

html, body {
	height: 100%; /* Damn you IE! */
}

.humanMsg {
	font: normal 12px Helvetica, Arial, Sans-Serif;
	position: fixed;
	top: 40px;
	left: 10px;
	width: 30%;
	color: white;
	text-align: left;
	z-index: 90;
	display: none;
	padding: 0px;
}

.humanMsg .imsgs .msg {
	padding: 10px;
	background-color: black;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	box-shadow: 0px 1px 5px #333;
	-webkit-box-shadow: 0px 1px 5px #333;
	-moz-box-shadow: 0px 1px 5px #333;
	margin-bottom: 5px;
	}

.humanMsg p {
	display: inline;
	}

.humanMsg p a {
	color: #19a5d1;
	}

.humanMsg .imsgs .msg {
	display: none;
	opacity: 0;
	}

#humanMsgLog {
	font: normal 10px Helvetica, Arial, Sans-Serif;
	color: white;
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	max-height: 200px;
	display: none;
	z-index: 10000;
	}

#humanMsgLog p {
	position: relative;
	left: 50%;
	width: 200px;
	margin: 0;
	margin-left: -100px;
	padding: 0 10px;
	line-height: 20px;
	background: #333;
	text-align: center;
	white-space: pre;
	cursor: pointer;
	}

#humanMsgLog p:hover {
	background: #222;
	}

#humanMsgLog ul {
	background: #eee url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAARCAIAAACaSvE/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAE1JREFUeNqEjVEKACAIQ516Ee//5wVNCjIjaB/iY5vC3YkoIgDkVDOjQ5pqLCI3r2bLFzNzyydvM4uKqfJPKN4vyl9LO/7o3/6PhwADAIWkFPjc5eRrAAAAAElFTkSuQmCC) repeat-x;
	margin: 0;
	padding: 0;
	position: relative;
	max-height: 180px;
	overflow: auto;
	display: none;
	}

#humanMsgLog ul li {
	color: #555;
	font-size: 12px;
	list-style-type: none;
	border-bottom: 1px solid #ddd;
	line-height: 40px;
	display: none;
	padding: 0 20px;
	position: relative;
	overflow: hidden;
	white-space: pre;
	}

#humanMsgLog ul li:hover {
	background: #f2f2f2;
	}

#humanMsgLog ul li:first-child {
	margin-top: 1px;
	}

#humanMsgLog ul li .error {
	color: orangered;
	}

#humanMsgLog ul li .indent {
	position: absolute;
	top: 0;
	left: 100px;
	margin-right: 200px;
	height: inherit;
	}
	
#intro_header.addon .container h3 {
	font-size: 23px;
}

#addon_versions {
	margin-top: 10px;
}

#addon_versions th {
	width: auto;
	text-align: left;
}

#addon_versions td {
	padding: 10px 0px;
}

.addon #edit_content.single h2 {
	padding-left: 0px !important;
}

#article.addon .info ul {
	float:left;
	margin-left: 10px;
	margin-bottom: 5px;
	width: 100%;
}

#article.addon .info ul li {
	float:left;
	margin: 5px 0px;
	width: 100%;
	clear:both;

}
	#article.addon .info ul li hr {
		margin-bottom: 10px;
	}
	
	#article.addon .info ul li i {
		font-size: 20px;
		opacity: 0.75;
		margin-top: 0px;
	}
		#article.addon .info ul li ol {
			margin-top: -5px;
			list-style: none;
			margin-left: 5px;
		}
			#article.addon .info ul li ol li span {
				float:left;
			}
				#article.addon .info ul li ol li span.number {
					line-height: 25px;
					width: 60px;					
				}
				
				#article.addon .info ul li ol li span.bar {
					background: rgb(224, 221, 214);
					width: 150px;
					height: 25px;
				}

				#article.addon .info ul li ol li span.color {
					background: rgb( 222, 134, 80 );
					height: 25px;
				}
	
#article.addons i {
	font-size: 80px;
	color: #fff;
	opacity: 1.0;
	margin-left: 17px;
	line-height: 130px;
}

.addon_block {
	padding: 10px 0px;
	background: #fff;
	margin-bottom: 0px;
	border-bottom: 1px solid #eee;
}
	.addon_block .body {
		padding: 10px 10px;
	}
		.addon_block .body.copy {
			padding: 20px 10px 0px;
		}
		.addon_block .body h4 {
			font-family: "Montserrat";
		}
	
	.addon_block .block {
		padding: 0px;
		margin: 0px;
		height: 100%;
		vertical-align: middle;
	}
		.addon_block .block i {
			font-size: 120px !important;
			color: #555 !important;
			margin-top: 30px;
			margin-bottom: 0px !important;
			margin-left: 30px !important;
		}
		.addon_block .block img {
			background: #eee;
			padding: 3px;
			margin: 15px 15px 10px;
			width: 125px;
			height: 125px;
		}
	
	.addon_block hr {
		margin-bottom: 10px;
	}
	
	.addon_block .meta {
		margin: 0px;
	}
	
	.addon_block .download_link {
		float:right;
		opacity: 1.0;
	}
		
	#addon_sidebar .download {
		margin-bottom: 15px;
	}
	
	#addon_sidebar .download a, #addon_sidebar .take_tour a {
		font-size: 17px;
		padding: 13px;
	}
		#addon_sidebar .take_tour {
			margin-bottom: 15px;
			margin-top: -10px;
		}
			#addon_sidebar .take_tour a {
				font-size: 15px;
				padding: 5px;
			}
	
	#addon_sidebar p {
		float:left;
		margin-left: 10px;
	}
	
#page-selector {
	margin: 0px 5px;
}
	#page-selector a {
		padding: 5px 10px;
		background: rgb(224, 221, 214);
	}
		#page-selector a.current-page {
			background: rgb(0, 0, 0);
			opacity: 0.65;
			color: #fff;
		}
		
		#page-selector a.prev-page, #page-selector a.next-page {
			background:none;
		}
	#page-selector.top {
		margin-bottom: 15px;
	}
	
	#page-selector.bottom {
		margin-top: 15px;
	}
	
.rating {
	float:left !important;
}
	.rating i {
		font-size: 23px !important;
		line-height: 30px !important;
		opacity: 1.0 !important;
	}
		
	.rating .bottom {
		z-index: 1;
		position: absolute !important;
		color: #ccc !important;
	}
		.rating .top {
			position:relative !important;
			z-index: 100;
			color: rgb( 222, 134, 80 ) !important;
			font-size: 24px !important;
			margin-top: -1px !important;
			opacity: 1.0 !important;
		}
				
		.rating .amount {
			float:left;
			overflow: hidden;
		}
			.zero {
				width: 0%;
			}
			
			.fifty {
				width: 50%;
			}
			
			.hundred {
				width: 100%;
			}
	.rating .hide {
		display:none !important;
	}
	
.rate_title {
	float:left;
	margin-top: 20px;
	padding: 3px 0px;
}

.rateit {
	float:right;
	color: #fff;
	background: rgb( 87, 154, 169 );
	padding:3px 6px;
	margin-top: 20px;
	margin-bottom: 5px;
	font-size: 12px;
}

#overview .rating {
	margin-left: -8px;
}

#overview .rating .bottom {
	z-index: 1;
	position: absolute !important;
	color: #ccc !important;
	margin-top: 0px;
}

#my_rating {
	margin-left: 55px;
}
	#my_rating div .bottom:hover {
		color: rgb( 222, 134, 80 );
	}

#cart label input[type=text] {
	margin-top: 5px;
}

#cart input[type=submit] {
	float:left;
	clear:both;
	margin-top: -10px;
	margin-bottom: 10px;
}

#cart #cart_downloads ul {
	margin: 0px;
	margin-bottom: -10px;
}

#cart #cart_downloads ul li {}

#cart #cart_downloads ul li + li {
	border-top: 1px solid #ddd;
	padding-top: 10px;
}

#cart .rate_title {
	width: 100%;
}

#cart .rate_title span {
	float:left;
}
	#cart .rate_title span.execute {
		float:right;
		margin-top: -3px;
	}
	
	#cart .rate_title span.execute a {
		font-size: 11px;
		text-transform: uppercase;
		background: #333;
		color: #fff;
		padding: 3px 5px;
	}
		#cart .rate_title span.execute a:hover {
			background:rgb( 87, 154, 169 );
		}
		
#cart label {
	float:left;
}

#cart #target_site {
	color: #333;
}

#cart form {
	float:left;
	margin-bottom: 5px;
}
	#cart form + form {
		display:none;
		width: 100%;
		border-top: 1px solid #ddd;
		margin-top: -10px;
		padding-top: 10px;
		margin-bottom: 7px;
	}
		#cart form + form span {
			display:block;
		}
		
		#cart form + form input[type=submit] {
			margin-top: 10px;
		}


#cart form input[type=text] {
	width: 75%;
	float:left;
}

input[type=submit].save_button {
	float:right !important;
	margin-top: -51px !important;
	display: inline-block;
	padding: 4px 12px;
	font-size: 12px;
	text-transform: uppercase;
	color: #333333;
	text-align: center;
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
	vertical-align: middle;
	cursor: pointer;
	background-color: #f5f5f5;
	border: 1px solid #cccccc;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
	line-height: 21px;
}

